--- a/memory.css
+++ b/memory.css
@@ -28,7 +28,7 @@ body {
   max-width: 100px;
   min-width: 50px;
   border-radius: 6px;
-  box-shadow: 3px 10px 3px 3px rgba(128, 128, 128, 0.219) inset;
+  box-shadow: 5px 10px 4px 0.7px rgba(71, 71, 71, 0.219) inset;
   transition: all 2s; }
 
 .container {
@@ -59,10 +59,11 @@ body {
 div .rotate {
   background-color: rgba(19, 50, 59, 0.329);
   transform-origin: center center;
-  transform: rotateY(180deg); }
+  transform: rotateY(360deg); }
 
 [class*="fa-"] {
-  font-size: 70px;
-  padding: 8%; }
+  font-size: 40px;
+  padding-left: 25%;
+  padding-top: 20%; }
 
 /*# sourceMappingURL=memory.css.map */
