--- a/memory.scss
+++ b/memory.scss
@@ -34,9 +34,9 @@ body {
 
 %items {
   background-color: black;
-  width: 100%;
-  max-width: 100px;
-  min-width: 50px;
+  width: 95%;
+  // max-width: 70%;
+  min-width: 95%;
   border-radius: 6px;
   box-shadow: 5px 10px 4px 0.7px rgba(71, 71, 71, 0.219) inset;
   transition: all 2s;
@@ -56,7 +56,8 @@ body {
   background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ACB6E5, #74ebd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   width: 50%;
-  min-width: 70%;
+  // max-width: 65%;
+  // min-width: 50%;
   height: 80vh;
   padding: 30px;
   border-radius: 10px;
@@ -64,14 +65,45 @@ body {
   justify-items: center;
   div {
     @extend %items;
-    max-width: 300px;
+    // max-width: 300px;
   }
 }
 
-@media (max-width: 579px) {
+@media (min-width: 700px) {
   .container {
-    width: 390px;
+    width: 500px;
   }
+  [class*="fa-"] {
+  font-size: 40px;
+  padding-left: 29%;
+  padding-top: 18%;
+  }
+}
+
+@media (max-width: 698px) {
+  .container {
+    width: 400px;
+  }
+  [class*="fa-"] {
+  font-size: 40px;
+  padding-left: 24%;
+  padding-top: 20%;
+}
+}
+
+@media (max-width: 320px) {
+  .container {
+    width: 300px;
+    height: 200px
+    div {
+      width: 55px;
+      height: 68px;
+    }
+  }
+  [class*="fa-"] {
+  font-size: 30px;
+  padding: 34% 27%;
+}
 }
 
 div {
@@ -82,11 +114,15 @@ div {
   }
 }
 
-[class*="fa-"] {
-  font-size: 40px;
-  padding-left: 25%;
-  padding-top: 20%;
+.visible {
+  visibility: hidden;
 }
+
+// [class*="fa-"] {
+//   font-size: 40px;
+//   padding-left: 28%;
+//   padding-top: 18%;
+// }
 
 
 
