--- a/memory.scss
+++ b/memory.scss
@@ -72,37 +72,39 @@ body {
 @media (min-width: 700px) {
   .container {
     width: 500px;
+    height: 70vh;
   }
   [class*="fa-"] {
   font-size: 40px;
   padding-left: 29%;
-  padding-top: 18%;
+  padding-top: 15%;
   }
 }
 
 @media (max-width: 698px) {
   .container {
     width: 400px;
+    height: 68vh
   }
   [class*="fa-"] {
   font-size: 40px;
-  padding-left: 24%;
-  padding-top: 20%;
+  padding-left: 25%;
+  padding-top: 18%;
 }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 370px) {
   .container {
-    width: 300px;
-    height: 200px
+    width: 270px;
+    height: 70vh;
     div {
-      width: 55px;
-      height: 68px;
+      width: 40px;
+      height: 60px;
     }
   }
   [class*="fa-"] {
-  font-size: 30px;
-  padding: 34% 27%;
+  font-size: 25px;
+  padding: 45% 24% 1%;
 }
 }
 
