--- a/memory.css
+++ b/memory.css
@@ -21,7 +21,22 @@ body {
     font-size: 24px;
     font-family: "system-ui";
     font-weight: 650; }
+  body p {
+    margin: 18px 50px 0px;
+    color: #AAB8E5; }
+    body p .clicks {
+      background-color: transparent;
+      color: #AAB8E5;
+      margin-left: 4px;
+      animation-iteration-count: infinite;
+      animation-duration: 1s; }
 
+@keyframes animate {
+  0% {
+    font-size: 18px;
+    opacity: 0.1; }
+  100% {
+    font-size: 19px; } }
 .container div {
   background-color: black;
   width: 95%;
@@ -31,7 +46,7 @@ body {
   transition: all 2s; }
 
 .container {
-  margin: 50px;
+  margin: 30px 50px 50px;
   display: grid;
   grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
   grid-template-areas: "one two three" "four five six" "seven eight nine" "ten eleven twelve" "thirteen fourteen fifteen";
@@ -83,7 +98,7 @@ div .rotate {
   transform-origin: center center;
   transform: rotateY(360deg); }
 
-.visible {
+.invisible {
   visibility: hidden; }
 
 /*# sourceMappingURL=memory.css.map */
