--- a/memory.css
+++ b/memory.css
@@ -22,14 +22,27 @@ body {
     font-family: "system-ui";
     font-weight: 650; }
   body p {
-    margin: 18px 50px 0px;
-    color: #AAB8E5; }
+    margin: 18px 0px 0px 50px;
+    color: #AAB8E5;
+    display: inline;
+    align-self: flex-start; }
     body p .clicks {
       background-color: transparent;
       color: #AAB8E5;
       margin-left: 4px;
       animation-iteration-count: infinite;
       animation-duration: 1s; }
+  body .time {
+    align-self: flex-end;
+    display: inline;
+    margin: -45px 60px 0px 0px;
+    color: #AAB8E5; }
+    body .time span {
+      width: 50px;
+      height: 50px;
+      background-color: rgba(17, 36, 100, 0.342); }
+      body .time span .secs {
+        margin-left: -10px; }
 
 @keyframes animate {
   0% {
