--- a/memory.scss
+++ b/memory.scss
@@ -31,14 +31,30 @@ body {
     }
   }
   p {
-    margin: 18px 50px 0px;
+    margin: 18px 0px 0px 50px;
     color: #AAB8E5;
+    display: inline;
+    align-self: flex-start;
     .clicks {
       background-color: transparent;
       color: #AAB8E5;
       margin-left: 4px;
       animation-iteration-count: infinite;
       animation-duration: 1s;
+    }
+  }
+  .time {
+    align-self: flex-end;
+    display: inline;
+    margin: -45px 60px 0px 0px;
+    color: #AAB8E5;
+    span {
+      width: 50px;
+      height: 50px;
+      background-color: rgba(17, 36, 100, 0.342);
+      .secs {
+        margin-left: -10px;
+      }
     }
   }
 }
