--- a/memory.css
+++ b/memory.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Titillium Web Regular"), local("TitilliumWeb-Regular"), url(https://fonts.gstatic.com/s/titilliumweb/v7/NaPecZTIAOhVxoMyOr9n_E7fdMPmDaZRbrw.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+@font-face {
+  font-family: "Digital";
+  src: url(Font/digital-7.ttf) format("truetype"); }
 html {
   margin: 0;
   padding: 0;
@@ -15,34 +24,43 @@ body {
   flex-flow: column wrap;
   justify-content: center;
   align-content: center;
-  margin: 25px; }
+  margin: 0px; }
   body header {
     margin: 0 auto;
+    color: #777aa2;
     font-size: 24px;
     font-family: "system-ui";
     font-weight: 650; }
-  body p {
-    margin: 18px 0px 0px 50px;
+
+.game {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  margin-left: 55px; }
+  .game p {
+    font-family: 'Titillium Web';
+    width: 200px;
     color: #AAB8E5;
-    display: inline;
     align-self: flex-start; }
-    body p .clicks {
+    .game p .clicks {
       background-color: transparent;
       color: #AAB8E5;
-      margin-left: 4px;
       animation-iteration-count: infinite;
       animation-duration: 1s; }
-  body .time {
-    align-self: flex-end;
-    display: inline;
-    margin: -45px 60px 0px 0px;
+  .game .time {
+    font-family: "Titillium Web";
     color: #AAB8E5; }
-    body .time span {
-      width: 50px;
-      height: 50px;
-      background-color: rgba(17, 36, 100, 0.342); }
-      body .time span .secs {
-        margin-left: -10px; }
+    .game .time span {
+      width: 5px;
+      height: 5px; }
+    .game .time .mins {
+      font-family: "Digital"; }
+    .game .time .secs {
+      font-family: "Digital"; }
+  .game .btime .mins {
+    font-family: "Digital"; }
+  .game .btime .secs {
+    font-family: "Digital"; }
 
 @keyframes animate {
   0% {
@@ -59,7 +77,7 @@ body {
   transition: all 2s; }
 
 .container {
-  margin: 30px 50px 50px;
+  margin: 15px 50px 50px;
   display: grid;
   grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
   grid-template-areas: "one two three" "four five six" "seven eight nine" "ten eleven twelve" "thirteen fourteen fifteen";
@@ -88,24 +106,50 @@ body {
     padding-top: 15%; } }
 @media (max-width: 698px) {
   .container {
-    width: 400px;
-    height: 68vh; }
+    width: 350px;
+    height: 70vh;
+    margin: 0 auto; }
 
   [class*="fa-"] {
-    font-size: 40px;
+    font-size: 30px;
     padding-left: 25%;
-    padding-top: 18%; } }
+    padding-top: 30%; }
+
+  .game {
+    width: 402px;
+    margin: 0 auto; }
+    .game p {
+      width: 140px; }
+    .game p:first-child {
+      width: 120px;
+      margin-left: 40px; }
+    .game .time {
+      width: 140px; } }
 @media (max-width: 370px) {
   .container {
-    width: 270px;
-    height: 70vh; }
+    width: 95%;
+    height: 60vh;
+    margin: 0 auto; }
     .container div {
       width: 40px;
-      height: 60px; }
+      height: 40px; }
 
   [class*="fa-"] {
     font-size: 25px;
-    padding: 45% 24% 1%; } }
+    padding: 20% 24% 1%; }
+
+  .game {
+    font-size: 14px;
+    margin: 0 auto;
+    width: 320px; }
+    .game p {
+      width: 100px;
+      margin-left: -20px;
+      color: #AAB8E5; }
+    .game p:first-child {
+      width: 100px; }
+    .game .time {
+      width: 80px; } }
 div .rotate {
   background-color: rgba(19, 50, 59, 0.329);
   transform-origin: center center;
@@ -113,5 +157,26 @@ div .rotate {
 
 .invisible {
   visibility: hidden; }
+
+.hide {
+  width: 100%;
+  height: 120%;
+  background-color: rgba(0, 0, 0, 0.938);
+  position: absolute;
+  transform: translateX(-110%);
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  transition: transform 3s; }
+  .hide p {
+    width: auto;
+    font-family: "Digital";
+    font-size: 24px;
+    color: white; }
+
+.open {
+  transform: translateX(0%); }
 
 /*# sourceMappingURL=memory.css.map */
